# democratizingdata-utils

./: LICENSE  README.md
src/scrapeyahoo/: main.py  pyproject.toml  requirements.txt
src/scrapeyahoo/scrapeyahoo/: create_commit.py  create_file.py  get_git_dir.py  push_commits.py  scrape.py  tickers.py
src/scrapeyahoo/tests/: test_scrapeyahoo.py
